syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.b4u.models";

message BalanceCheckRequest {
  int32 account_number = 1;
}

// USD
message Balance {
  int32 amount = 1;
}

service BankService {

  //unary
  rpc getBalance(BalanceCheckRequest) returns (Balance);
}

